# ai-supervision

./: .gitignore  case-study.md  competitor-analysis.md  index.html  prd.md  product-concept.md  product-roadmap.md  research-plan.md  登陆.md
.github/workflows/: deploy.yml
assets/: index--Gfx895l.js  index-BHaTs9a-.css  index-Bf8BQ0VI.js  index-BshiXXHV.css  index-BxsGymyV.css  index-BzhPiQPN.css  index-CB5Z87T1.js  index-ChslgRlX.css  index-DdsyHK-J.js  index-DfmJ52mT.js  index-DuFW54mL.css  index-bQa253BO.js  index-bU1rYxD7.css  index-nth4BTBU.js
poc/: HANDOFF.md  README.md  pyproject.toml
poc/src/: __init__.py  audio_capture.py  main.py  screen_capture.py  storage.py
prototype/: index.html  package-lock.json  package.json  vite.config.ts
prototype/docs/: Ai-meeting.md  additional-research.md  filter.md  landing-page-analysis.md
prototype/src/: App.tsx  index.css
prototype/src/components/: CoachLayout.tsx  Layout.tsx
prototype/src/data/: bookingStore.ts  caseStudyContent.ts  coaches.ts
prototype/src/pages/: BookingConfirmation.tsx  CaseStudy.tsx  CaseStudyAntd.tsx  CaseStudyMinimal.tsx  CaseStudyStory.tsx  ClientDetail.tsx  Clients.tsx  CoachDirectory.tsx  CoachProfile.tsx  CoachRegister.tsx  Dashboard.tsx  ForCoaches.tsx  Landing.tsx  LandingNew.tsx  Login.tsx  MyBookings.tsx  Practice.tsx  PracticeSession.tsx  Progress.tsx  Report.tsx  Review.tsx  ReviewSession.tsx
research/: coach-acquisition-pain.md  coach-supervision-market.md  market-size-research.md  screenpipe-transcription-analysis.md  seo-keyword-research.md  summary.md  us-regulations.md
(+37 files in other folders)
